src/shared/layouts/MainLayouts/Header/Header.module.scss
$font-size: 15px;
$font-line: 150%;
$font: $font-size $font-line var(--font-family-secondary);

$font-size-s: 12px;

.header {
  position: relative;
  background-color: var(--bg-dark-color);
  color: var(--text-light-color);
}

.upper {
  position: relative;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  align-items: center;
  padding: 14px 0;
  font: $font
}

.linkFull {
  display: flex;
  align-items: center;
  gap: var(--space-s);
}

.logo {
  max-width: 186px;
  display: block;
  margin: auto;

  & > img {
    display: block;
    width: 100%;
  }
}

.actions {
  display: flex;
  justify-content: flex-end;
  gap: 50px;
}

// lower
.lower {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: var(--space-s);
  padding: 13px 0 12px 0;
}

.search {
  flex: toPercent(418); // 418px
}

.navbar {
  flex: 0 1 toPercent(560);
}

// Mobile Version
.row {
  padding: 18px 0;
  display: flex;
  align-items: center;
  justify-content: space-between;

  .search {
    max-width: toPercent(274, 768);
  }
}

@include media-max-tablet-s {
  .upper,
  .lower {
    display: none;
  }
}

@include media-max-mobile-s {
  .row {
    .like,
    .avatar,
    .search {
      display: none;
    }
  }
}

